--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "my_vue_element",
+  "name": "vuexdemo",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "ilss <375259904@qq.com>",
+  "author": "lsm2039 <812049786@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -11,19 +11,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.18.0",
     "element-ui": "^2.13.0",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.4.0",
-    "jquery-ui": "^1.12.1",
-    "js-md5": "^0.7.3",
-    "jsplumb": "^2.9.0",
-    "socket.io-client": "^2.2.0",
     "vue": "^2.5.2",
-    "vue-codemirror": "^4.0.6",
-    "vue-echarts-sedu": "^1.0.0",
-    "vue-language-switch": "^1.0.10",
-    "vue-router": "^3.0.7"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -37,10 +27,7 @@
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
-    "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.0.1",
-    "css-color-function": "^1.3.3",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
@@ -53,12 +40,8 @@
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
-    "file-saver": "^1.3.8",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "js-cookie": "^2.2.0",
-    "less": "^3.5.2",
-    "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -66,18 +49,15 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
-    "reset-css": "^4.0.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-i18n": "^8.0.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "vuex": "^3.0.1",
+    "vuex": "^3.1.3",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
@@ -91,7 +71,5 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "main": ".eslintrc.js",
-  "license": "ISC"
+  ]
 }
